Fix TabStripModel::IsNewTabAtEndOfTabStrip never returning true.

TabStripModel::IsNewTabAtEndOfTabStrip is called during a tab navigation
and is intended to prevent the opener relationship of that tab from
being forgotten if it returns true. However, GetURL was changed to
return the visible URL (i.e. the one being loaded) instead of the last
committed URL, so this would always fail. Also updates the associated
test, which was not doing a navigation.

Bug: 896929
Change-Id: I3f00e3f6f84da2986bab96b85aeb5eb04ef3cb21
Reviewed-on: https://chromium-review.googlesource.com/c/1292003
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601808}
Former-commit-id: e78b9a129064c9f459286da5a187fb182a80a751